# seqreads

./: README.rst  pyproject.toml
docs/: CNAME  index.html
src/seqreads/: __init__.py
src/seqreads/core/: __init__.py
src/seqreads/tests/: __init__.py  test_1984.py
