[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
    { email = "johannes-programming@posteo.net", name = "Johannes" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "Bio>=1.6",
    "na_quantors>=1.0",
]
description = "seqreads"
keywords = []
name = "seqreads"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.1.2+local.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://pypi.org/project/seqreads"
Download = "https://pypi.org/project/seqreads/#files"
Index = "https://pypi.org/project/seqreads/"
Source = "https://github.com/johannes-programming/seqreads"
